<resources>
    <string name="app_name">CoffeShop</string>
    <string name="find_the_best_coffee_n_you">Find the best coffee \n you</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="good_morning">Good Morning</string>
    <string name="select_category">Select Category</string>
    <string name="ice_drink">Ice Drink</string>
    <string name="hot_coffee">Hot Coffee</string>
    <string name="hot_drink">Hot Drink</string>
    <string name="ice_coffee">Ice Coffee</string>
    <string name="shake">Shake</string>
    <string name="restaurant">Restaurant</string>
</resources>