<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".Activity.MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_bg" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/good_morning"
        android:fontFamily="@font/pristina"
        android:textSize="60sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/blur_background"
        app:blurOverlayColor="#10ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/select_category"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnIceDrink"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/half_white"
                    android:gravity="bottom"
                    android:minHeight="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_1" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/ice_drink"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnHotDrink"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/half_white"
                    android:gravity="bottom"
                    android:minHeight="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_2" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/hot_drink"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnHotCoffee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/half_white"
                    android:gravity="bottom"
                    android:minHeight="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_2" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/hot_coffee"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnIceCoffee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/half_white"
                    android:gravity="bottom"
                    android:minHeight="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_4" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/ice_coffee"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnBrewingCoffee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/half_white"
                    android:gravity="bottom"
                    android:minHeight="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_5" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="Brewing Coffee"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnShake"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/half_white"
                    android:gravity="bottom"
                    android:minHeight="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_6" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/shake"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnRestaurant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/half_white"
                    android:gravity="bottom"
                    android:minHeight="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_7" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/restaurant"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnBreakfast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/half_white"
                    android:gravity="bottom"
                    android:minHeight="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_8" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="Breakfast"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnCake"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/half_white"
                    android:gravity="bottom"
                    android:minHeight="100dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_9" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="Cake"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </eightbitlab.com.blurview.BlurView>
</androidx.constraintlayout.widget.ConstraintLayout>